Destroy Order documented
